feat:Se agregan modulos material y firebase

--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -117,8 +118,16 @@
               "devServerTarget": "dw-mcruzt-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "dw-mcruzt-app"
+    }
+  },
+  "defaultProject": "dw-mcruzt-app",
+  "cli": {
+    "analytics": false
+  }
 }
