--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dw-mcruzt-app",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ng build --aot -prod",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
