--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.901.12",
     "@angular/animations": "~9.1.12",
     "@angular/cdk": "^9.2.4",
+    "@angular/cli": "^9.1.12",
     "@angular/common": "~9.1.12",
     "@angular/compiler": "~9.1.12",
+    "@angular/compiler-cli": "^9.1.12",
     "@angular/core": "~9.1.12",
     "@angular/fire": "^6.0.3",
     "@angular/forms": "~9.1.12",
@@ -25,12 +28,10 @@
     "firebase": "^7.21.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "^3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.12",
-    "@angular/cli": "~9.1.12",
-    "@angular/compiler-cli": "~9.1.12",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -45,7 +46,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3",
     "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
