--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "node server.js",
     "start-dev": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "build-dev": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,6 +27,7 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@angular/service-worker": "~9.1.12",
     "express": "^4.17.1",
     "firebase": "^7.21.1",
     "rxjs": "~6.5.4",
@@ -54,9 +56,5 @@
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "open": "^7.0.3"
-  },
-  "engines": {
-    "node": "10.15.3",
-    "npm": "6.4.1"
   }
 }
